# ml-model-deployment

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_EXAM.md  change_ideas.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  pr-checks.yml
src/ml_engineer_exam/: config.py
src/ml_engineer_exam/api/: app.py  predict_request.json
src/ml_engineer_exam/model/: __init__.py  utils.py
src/ml_engineer_exam/prediction/: __init__.py
src/ml_engineer_exam/prepare/: __init__.py
src/ml_engineer_exam/scripts/: run_model.py  run_model_training.py  run_prediction.py
terraform/: api_gateway.tf  ecr.tf  iam.tf  lambda.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_api.py
tests/prediction/: test_prediction.py
