[project]
name = "ml-engineer-exam"
version = "0.3.3"
description = "A sample project for ML engineering exam for Milliman IntelliScript."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "loguru>=0.7.3",
    "mangum>=0.21.0",
    "pandas>=3.0.0",
    "pre-commit>=4.5.0",
    "pydantic>=2.12.5",
    "pyspark>=3.5.0,<4.0.0",
    "ruff>=0.15.7",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
]

[project.scripts]
run_model_training = "ml_engineer_exam.scripts.run_model_training:main"
run_prediction = "ml_engineer_exam.scripts.run_prediction:main"
test = "pytest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
package-dir = {"ml_engineer" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes errors
    "W", # pyflakes warnings
]
ignore = [
    "E501", # line-length, handled by black
    "E712", # ignores changes from 'is' and '==' operators to allow dataframe ops
]
